--- a/src/styles/Admin_user.css
+++ b/src/styles/Admin_user.css
@@ -14,11 +14,11 @@
 {
     /* border: 3px solid blue; */
     display: flex;
-    height: 70%;
-    width: 80%;
+    height: 50%;
+    width: 50%;
     position: relative; 
-    top: 100px;
-    left: 80px;
+    top: 140px;
+    left: 25%;
     border-radius: 10px;
     box-shadow: 4px 4px 4px rgb(97, 91, 91);
 }
@@ -80,7 +80,7 @@
     /* border: 2px solid; */
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items:  flex-end;
     justify-content: space-evenly;  
     height: 60px;
 
