--- a/src/styles/AdminPortal.css
+++ b/src/styles/AdminPortal.css
@@ -7,3 +7,11 @@
     justify-content: space-around; */
     /* background-color: rgb(195, 103, 103); */
 }
+.adminHome,.booklist,.addbooks,.addusers,.userlist,.adminProfile
+{
+    border: 2px solid;
+    position: absolute;
+    left: 280px;
+    height: 100vh;
+    width:75%;
+}
